CR Fixes